[package]
name = "snake"
version = "0.1.0"
authors = ["Art Longbottom <art.longbottom.jr@gmail.com>"]
edition = "2018"
description = "An epic game of snakes eating apples"

[package.metadata.bundle]
name = "Rust Snake"
identifier = "com.alongbottom.rust-snake"
version = "1.0.0"

[dependencies]
rand = "0.8.3"
piston_window = "0.117.0"
